[scg] Add integrate button. Hide edit buttons when edit not possible. Fix autocompletion

--- a/components/scg/static/components/html/scg-tools-panel.html
+++ b/components/scg/static/components/html/scg-tools-panel.html
@@ -33,11 +33,15 @@
         <button id="scg-tool-zoomout" type="button" class="btn btn-default" title="Zoom out">
             <img src="static/components/images/scg/tool-zoom-out.png"/>
         </button>
+        <button id="scg-tool-integrate" type="button" class="btn btn-default" title="Integrate">
+            <img src="static/components/images/scg/tool-integrate.png"/>
+        </button>
 
         <div id="scg-tool-open" type="button" class="btn btn-default" title="Open">
             <input id="scg-tool-open-dialog" type="file" style="visibility: hidden; position: absolute;">
             <img style="width: 30px" src="static/components/images/scg/tool-open.png"/>
         </div>
+        
 
     </div>
 </div>
